--- a/src/components/TodoItem/style.css
+++ b/src/components/TodoItem/style.css
@@ -20,6 +20,19 @@
     border: 1px solid mediumaquamarine;
     background-color: #86ab86;
     color: white;
+    animation: 1s infinite scale;
+}
+
+@keyframes scale {
+    0% {
+        transform: scale(0.75);
+    }
+    50% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0.75);
+    }
 }
 
 .taskDescription {
