--- a/src/components/TodoItem/style.css
+++ b/src/components/TodoItem/style.css
@@ -20,7 +20,7 @@
 
 .edit-content-icon {
     max-height: 26px;
-    margin: 0;
+    margin: 0 3px 0 0;
     font-size: 20px;
     color: mediumaquamarine;
     cursor: pointer;
