--- a/src/components/TodoItem/style.css
+++ b/src/components/TodoItem/style.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    gap: 3px;
     margin-bottom: 10px;
     padding: 3px;
     border: 1px solid transparent;
@@ -20,7 +21,7 @@
 
 .edit-content-icon {
     max-height: 26px;
-    margin: 0 3px 0 0;
+    margin: 0;
     font-size: 20px;
     color: mediumaquamarine;
     cursor: pointer;
